fix: Aside structure

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
   <div class="container">
-    <aside>
-      <div class="aside-container">
-        <header class="header">
+    <aside class="aside">
+      <div class="aside__container">
+        <div class="aside__header header">
           <figure class="header__logo">
             <img id="logoImg" src="./images/logo.jpg" alt="logo">
             <figcaption class="header__title">
@@ -25,12 +25,14 @@
             </figcaption>
           </figure>
           <div class="header__text">Junior Front-end Developer</div>
-        </header>
+        </div>
 
         <div class="aside__content">
-          <div class="aside__item contact">
-            <div class="aside__item_title">Contact</div>
-            <div class="aside__item_list">
+          <div class="aside__item item-aside">
+            <div class="item-aside__title">
+              <h3>Contact</h3>
+            </div>
+            <div class="item-aside__list">
               <ul>
                 <li>Belarus, Minsk</li>
                 <li>80298617317</li>
@@ -38,27 +40,27 @@
               </ul>
             </div>
           </div>
-          <div class="aside__item followMe">
-            <div class="aside__item_title">Follow Me</div>
-            <div class="aside__item_list">
+          <div class="aside__item item-aside">
+            <div class="item-aside__title">Follow Me</div>
+            <div class="item-aside__list">
               <ul>
                 <li>80298617317</li>
                 <li><a href="https://vk.com/syrobasina">Vk/syrobasina</a></li>
               </ul>
             </div>
           </div>
-          <div class="aside__item Language">
-            <div class="aside__item_title">Language</div>
-            <div class="aside__item_list">
+          <div class="aside__item item-aside">
+            <div class="item-aside__title">Language</div>
+            <div class="item-aside__list">
               <ul>
                 <li>Russian</li>
                 <li>English</li>
               </ul>
             </div>
           </div>
-          <div class="aside__item Hobbies">
-            <div class="aside__item_title">Hobbies</div>
-            <div class="aside__item_list">
+          <div class="aside__item item-aside">
+            <div class="item-aside__title">Hobbies</div>
+            <div class="item-aside__list">
               <ul>
                 <li>Bodybuilding</li>
                 <li>Reading</li>
@@ -68,6 +70,7 @@
             </div>
           </div>
         </div>
+
       </div>
 
 
