fix: Update aside structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
+  <script src="https://kit.fontawesome.com/f01634794f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/style.css">
   <title>CV-Skrinnik</title>
 </head>
@@ -34,38 +35,66 @@
             </div>
             <div class="item-aside__list">
               <ul>
-                <li>Belarus, Minsk</li>
-                <li>80298617317</li>
-                <li>rakyt4gin@gmail.com</li>
+                <li><i class="fas fa-map-marker-alt"></i>Belarus, Minsk</li>
+                <li><i class="fas fa-phone-alt"></i>80298617317</li>
+                <li><i class="far fa-envelope"></i>rakyt4gin@gmail.com</li>
               </ul>
             </div>
           </div>
           <div class="aside__item item-aside">
-            <div class="item-aside__title">Follow Me</div>
+            <div class="item-aside__title">
+              <h3>Follow Me</h3>
+            </div>
             <div class="item-aside__list">
               <ul>
-                <li>80298617317</li>
-                <li><a href="https://vk.com/syrobasina">Vk/syrobasina</a></li>
+                <li><i class="fab fa-telegram-plane"></i>80298617317</li>
+                <li><i class="fab fa-vk"></i><a href="https://vk.com/syrobasina">Vk/syrobasina</a></li>
               </ul>
             </div>
           </div>
           <div class="aside__item item-aside">
-            <div class="item-aside__title">Language</div>
-            <div class="item-aside__list">
+            <div class="item-aside__title">
+              <h3>Language</h3>
+            </div>
+            <div class="item-aside__list aside-language">
               <ul>
-                <li>Russian</li>
-                <li>English</li>
+                <li>
+                  <p>Russian</p>
+                  <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                </li>
+                <li>
+                  <p>English</p>
+                  <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
           <div class="aside__item item-aside">
-            <div class="item-aside__title">Hobbies</div>
+            <div class="item-aside__title">
+              <h3>Hobbies</h3>
+            </div>
             <div class="item-aside__list">
               <ul>
-                <li>Bodybuilding</li>
-                <li>Reading</li>
-                <li>Swimming</li>
-                <li>Cycling</li>
+                <div>
+                  <li>Bodybuilding</li>
+                  <li>Reading</li>
+                </div>
+                <div>
+                  <li>Swimming</li>
+                  <li>Cycling</li>
+                </div>
               </ul>
             </div>
           </div>
