--- a/index.html
+++ b/index.html
@@ -102,11 +102,92 @@
 
       </div>
 
-
     </aside>
 
-    <main>
-
+    <main class="main">
+      <div class="main__container">
+        <div class="main__item">
+          <div class="main__title">
+            <i class="fas fa-user-alt"></i>
+            <h2>ABOUT ME</h2>
+          </div>
+          <div class="main__content">I have a lot of purposes in diffirent types of activities. But my main purpose is
+            become a front-end developer. I like to learn something new and it's very hard for me, but i don't give up
+            and
+            try again if something doesn't work. I'm a student of BSUIR and don't work, because at first i should get a
+            lot of knowledge from this perfect course.</div>
+        </div>
+        <div class="main__item">
+          <div class="main__title">
+            <i class="fas fa-graduation-cap"></i>
+            <h2>EDUCATION</h2>
+          </div>
+          <div class="main__list">
+            <ul>
+              <li>
+                <div><i class="fas fa-chevron-right"></i>BSUIR</div> <span>2017 - until now</span>
+              </li>
+              <li>
+                <div><i class="fas fa-chevron-right"></i>High school №174</div> <span>2006 - 2017</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="main__item">
+          <div class="main__title">
+            <i class="fas fa-scroll"></i>
+            <h2>SKILLS</h2>
+          </div>
+          <div class="main__list">
+            <ul>
+              <div>
+                <li>
+                  <p>Html5</p>
+                  <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                </li>
+                <li>
+                  <p>CSS3</p>
+                  <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                </li>
+              </div>
+              <div>
+                <li>
+                  <p>Bootstrap</p>
+                  <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                </li>
+                <li>
+                  <p>JAvascript</p>
+                  <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                </li>
+              </div>
+            </ul>
+          </div>
+        </div>
+      </div>
     </main>
 
   </div>
