--- a/index.html
+++ b/index.html
@@ -16,180 +16,187 @@
 
 <body>
   <div class="container">
-    <aside class="aside">
-      <div class="aside__container">
-        <div class="aside__header header">
-          <figure class="header__logo">
-            <img id="logoImg" src="./images/logo.jpg" alt="logo">
-            <figcaption class="header__title">
-              <h1>SKRINNIK <span>ANDREI</span></h1>
-            </figcaption>
-          </figure>
-          <div class="header__text">Junior Front-end Developer</div>
-        </div>
+    <div class="content">
+      <aside class="aside">
+        <div class="aside__container">
+          <div class="aside__header header">
+            <figure class="header__logo">
+              <img id="logoImg" src="./images/logo.jpg" alt="logo">
+              <figcaption class="header__title">
+                <h1>SKRINNIK <span>ANDREI</span></h1>
+              </figcaption>
+            </figure>
+            <div class="header__text">Junior Front-end Developer</div>
+          </div>
 
-        <div class="aside__content">
-          <div class="aside__item item-aside">
-            <div class="item-aside__title">
-              <h3>Contact</h3>
-            </div>
-            <div class="item-aside__list">
-              <ul>
-                <li><i class="fas fa-map-marker-alt"></i>Belarus, Minsk</li>
-                <li><i class="fas fa-phone-alt"></i>80298617317</li>
-                <li><i class="far fa-envelope"></i>rakyt4gin@gmail.com</li>
-              </ul>
-            </div>
-          </div>
-          <div class="aside__item item-aside">
-            <div class="item-aside__title">
-              <h3>Follow Me</h3>
-            </div>
-            <div class="item-aside__list">
-              <ul>
-                <li><i class="fab fa-telegram-plane"></i>80298617317</li>
-                <li><i class="fab fa-vk"></i><a href="https://vk.com/syrobasina">Vk/syrobasina</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="aside__item item-aside">
-            <div class="item-aside__title">
-              <h3>Language</h3>
-            </div>
-            <div class="item-aside__list aside-language">
-              <ul>
-                <li>
-                  <p>Russian</p>
-                  <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                  </div>
-                </li>
-                <li>
-                  <p>English</p>
-                  <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="aside__item item-aside">
-            <div class="item-aside__title">
-              <h3>Hobbies</h3>
-            </div>
-            <div class="item-aside__list">
-              <ul>
-                <div>
-                  <li>Bodybuilding</li>
-                  <li>Reading</li>
-                </div>
-                <div>
-                  <li>Swimming</li>
-                  <li>Cycling</li>
-                </div>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-    </aside>
-
-    <main class="main">
-      <div class="main__container">
-        <div class="main__item">
-          <div class="main__title">
-            <i class="fas fa-user-alt"></i>
-            <h2>ABOUT ME</h2>
-          </div>
-          <div class="main__content">I have a lot of purposes in diffirent types of activities. But my main purpose is
-            become a front-end developer. I like to learn something new and it's very hard for me, but i don't give up
-            and
-            try again if something doesn't work. I'm a student of BSUIR and don't work, because at first i should get a
-            lot of knowledge from this perfect course.</div>
-        </div>
-        <div class="main__item">
-          <div class="main__title">
-            <i class="fas fa-graduation-cap"></i>
-            <h2>EDUCATION</h2>
-          </div>
-          <div class="main__list">
-            <ul>
-              <li>
-                <div><i class="fas fa-chevron-right"></i>BSUIR</div> <span>2017 - until now</span>
-              </li>
-              <li>
-                <div><i class="fas fa-chevron-right"></i>High school №174</div> <span>2006 - 2017</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="main__item">
-          <div class="main__title">
-            <i class="fas fa-scroll"></i>
-            <h2>SKILLS</h2>
-          </div>
-          <div class="main__list">
-            <ul>
-              <div>
-                <li>
-                  <p>Html5</p>
-                  <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                  </div>
-                </li>
-                <li>
-                  <p>CSS3</p>
-                  <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                  </div>
-                </li>
+          <div class="aside__content">
+            <div class="aside__item item-aside">
+              <div class="item-aside__title">
+                <h3>Contact</h3>
               </div>
-              <div>
-                <li>
-                  <p>Bootstrap</p>
-                  <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                  </div>
-                </li>
-                <li>
-                  <p>JAvascript</p>
-                  <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                  </div>
-                </li>
+              <div class="item-aside__list">
+                <ul>
+                  <li><i class="fas fa-map-marker-alt"></i>Belarus, Minsk</li>
+                  <li><i class="fas fa-phone-alt"></i>80298617317</li>
+                  <li><i class="far fa-envelope"></i>rakyt4gin@gmail.com</li>
+                </ul>
               </div>
-            </ul>
+            </div>
+            <div class="aside__item item-aside">
+              <div class="item-aside__title">
+                <h3>Follow Me</h3>
+              </div>
+              <div class="item-aside__list">
+                <ul>
+                  <li><i class="fab fa-telegram-plane"></i>80298617317</li>
+                  <li><i class="fab fa-vk"></i><a href="https://vk.com/syrobasina">Vk/syrobasina</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="aside__item item-aside">
+              <div class="item-aside__title">
+                <h3>Language</h3>
+              </div>
+              <div class="item-aside__list aside-language">
+                <ul>
+                  <li>
+                    <p>Russian</p>
+                    <div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                    </div>
+                  </li>
+                  <li>
+                    <p>English</p>
+                    <div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="aside__item item-aside">
+              <div class="item-aside__title">
+                <h3>Hobbies</h3>
+              </div>
+              <div class="item-aside__list">
+                <ul>
+                  <li>
+                    <div>Bodybuilding</div>
+                    <div>Reading</div>
+                  </li>
+                  <li>
+                    <div>Swimming</div>
+                    <div>Cycling</div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </aside>
+
+      <main class="main">
+        <div class="main__container">
+          <div class="main__item">
+            <div class="main__title">
+              <i class="fas fa-user-alt"></i>
+              <h2>ABOUT ME</h2>
+            </div>
+            <div class="main__content">I have a lot of purposes in diffirent types of activities. But my main purpose is
+              become a front-end developer. I like to learn something new and it's very hard for me, but i don't give up
+              and
+              try again if something doesn't work. I'm a student of BSUIR and don't work, because at first i should get
+              a
+              lot of knowledge from this perfect course.</div>
+          </div>
+          <div class="main__item">
+            <div class="main__title">
+              <i class="fas fa-graduation-cap"></i>
+              <h2>EDUCATION</h2>
+            </div>
+            <div class="main__list">
+              <ul>
+                <li>
+                  <div><i class="fas fa-chevron-right"></i>BSUIR</div> <span>2017 - until now</span>
+                </li>
+                <li>
+                  <div><i class="fas fa-chevron-right"></i>High school №174</div> <span>2006 - 2017</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="main__item">
+            <div class="main__title">
+              <i class="fas fa-scroll"></i>
+              <h2>SKILLS</h2>
+            </div>
+            <div class="main__list">
+              <ul>
+                <li>
+                  <div>
+                    <p>Html5</p>
+                    <div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                    </div>
+                  </div>
+                  <div>
+                    <p>CSS3</p>
+                    <div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div>
+                    <p>Bootstrap</p>
+                    <div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                    </div>
+                  </div>
+                  <div>
+                    <p>JAvascript</p>
+                    <div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
 
+    <footer class="footer">
+      <a href="https://rs.school/js/"><img src="./images/rs_school_js.svg" alt=""></a>
+      <a href="https://github.com/rakyt4gin/rsschool-cv">GitHub</a>
+    </footer>
   </div>
 </body>
 
