fix: Add alt for img

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </div>
 
     <footer class="footer">
-      <a href="https://rs.school/js/"><img src="./images/rs_school_js.svg" alt=""></a>
+      <a href="https://rs.school/js/"><img src="./images/rs_school_js.svg" alt="Rs-School-logo"></a>
       <a href="https://github.com/rakyt4gin/rsschool-cv">GitHub</a>
     </footer>
   </div>
